# rust-balatro-ai

./: Cargo.toml  build.rs
ai/: architecture.md
balatro/: Cargo.toml  README.md  TODO.md  patch.co
balatro/src/: lib.rs  serialize.rs  stackvec.rs  test.rs
codegen/: Cargo.toml  README.md
codegen/src/: main.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
