[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
isahc = { version = "1.7.2", default-features = false, features = [
  "json",
  "http2",
] }
smol = "2.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
percent-encoding = { version = "2.3.1", default-features = false }
balatro = { path = "../balatro" }
parse_wiki_text = "0.1.5"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
